update api parsing
